--- a/src/app/features/auth/auth.component.html
+++ b/src/app/features/auth/auth.component.html
@@ -5,9 +5,12 @@
     <div class="right">
         <img src="assets/images/Login_Image.png" alt="Login Image">
         <div class="slogan">
-            <h2 class="htxt mb-3">Enhancing Business Performance</h2>
-            <p class="lead-text htxt"><q>Maximize business opportunities, reduce costs and attain profitability by
-                aligning IT with your Business through IT modernization and transformation.</q></p>
+            <h2 class="htxt mb-3">{{ 'auth.enhancing_business_performance' | translate }}</h2>
+            <p class="lead-text htxt">
+                <q>
+                    {{ 'auth.lead_text' | translate }}
+                </q>
+            </p>
             <h5 class="htxt">- Turnkey Africa</h5>
         </div>
     </div>
