--- a/src/app/features/auth/change-password/change-password.component.html
+++ b/src/app/features/auth/change-password/change-password.component.html
@@ -6,12 +6,12 @@
       </span>
     </div>
 
-    <h4 class="forgot-password-text mb-3">Change Password</h4>
-    <p class="text-muted mb-3">Set your preferred password.</p>
+    <h4 class="forgot-password-text mb-3">{{ 'auth.change_password' | translate }}</h4>
+    <p class="text-muted mb-3">{{ 'auth.change_password_instruction' | translate }}</p>
 
     <form (ngSubmit)="onSave()" [formGroup]="form" aria-labelledby="title">
       <div class="form-control-group mb-3">
-        <label class="form-label" for="newPassword">New Password</label>
+        <label class="form-label" for="newPassword">{{ 'auth.new_password' | translate }}</label>
         <input
           name="newPassword"
           id="newPassword"
@@ -22,12 +22,16 @@
           autofocus>
 
         <div  *ngIf="f['newPassword'].invalid && (f['newPassword'].dirty || f['newPassword'].touched)" class="form-text text-danger form-error-text" [ngClass]="{ 'is-invalid': submitted && f['newPassword'].errors }">
-          <div *ngIf="f['newPassword'].errors['required']">Password is required</div>
-          <div *ngIf="f['newPassword'].errors['minlength']">Password must be at least 6 characters</div>
+          <div *ngIf="f['newPassword'].errors['required']">
+            {{ 'auth.password_required' | translate }}
+          </div>
+          <div *ngIf="f['newPassword'].errors['minlength']">
+            {{ 'auth.new_password_invalid' | translate }}
+          </div>
         </div>
       </div>
       <div class="form-control-group mb-3">
-        <label class="form-label" for="confirmPassword">Confirm Password</label>
+        <label class="form-label" for="confirmPassword">{{ 'auth.confirm_password' | translate }}</label>
         <input type="password"
                name="confirmPassword"
                id="confirmPassword"
@@ -36,13 +40,13 @@
                placeholder="Atleast 6 characters"
                autofocus>
         <div *ngIf="f['confirmPassword'].invalid && (f['confirmPassword'].dirty || f['confirmPassword'].touched)" class="form-text text-danger form-error-text" [ngClass]="{ 'is-invalid': submitted && f['confirmPassword'].errors }">
-          <div *ngIf="f['confirmPassword'].errors['required']">Confirm Password is required</div>
-          <div *ngIf="f['confirmPassword'].errors['confirmedValidator']">Passwords must match</div>
+          <div *ngIf="f['confirmPassword'].errors['required']">{{ 'auth.confirm_password_required' | translate }}</div>
+          <div *ngIf="f['confirmPassword'].errors['confirmedValidator']">{{ 'auth.passwords_must_match' | translate }}</div>
         </div>
       </div>
 
       <button id="saveButton" class="btn btn-primary btn-full-width" size="large" [disabled]="isLoading || !form.valid">
-        <span *ngIf="!isLoading; else loading">Save</span>
+        <span *ngIf="!isLoading; else loading">{{ 'auth.save' | translate }}</span>
         <ng-template #loading>
           <i class="pi pi-spin pi-spinner text-white" style="font-size: 2rem"></i>
         </ng-template>
