--- a/src/app/features/auth/forgot-password/forgot-password.component.html
+++ b/src/app/features/auth/forgot-password/forgot-password.component.html
@@ -6,26 +6,26 @@
       </span>
     </div>
 
-    <h4 class="forgot-password-text mb-3">Forgot Password</h4>
-    <p class="text-muted mb-3">Enter your email address and registered phone number to verify your account.</p>
+    <h4 class="forgot-password-text mb-3">{{ 'auth.forgot_password' | translate }}</h4>
+    <p class="text-muted mb-3">{{ 'auth.forgot_password_instruction' | translate }}</p>
     <form [formGroup]="form" (ngSubmit)="onSubmit()" aria-labelledby="title">
       <div class="form-group mb-3">
-        <label class="form-label" for="input-email">Your Email</label>
+        <label class="form-label" for="input-email">{{ 'auth.email_address' | translate }}</label>
         <input name="email" id="input-email" formControlName="email" class="form-control" autofocus>
         <div *ngIf="f['email'].invalid && (f['email'].dirty || f['email'].touched)" class="form-text text-danger form-error-text" [ngClass]="{ 'is-invalid': submitted && f['email'].errors }">
-          <div *ngIf="f['email'].errors?.['required']">Email is required</div>
-          <div *ngIf="f['email'].errors?.['email']">Email address is not valid</div>
+          <div *ngIf="f['email'].errors?.['required']">{{ 'auth.email_required' | translate }}</div>
+          <div *ngIf="f['email'].errors?.['email']">{{ 'auth.email_invalid' | translate }}</div>
         </div>
       </div>
       <div class="form-group mb-3" style="padding-top: 10px">
-        <label class="form-label" for="input-phoneNumber">Your Phone Number</label>
+        <label class="form-label" for="input-phoneNumber">{{ 'auth.phone_number' | translate }}</label>
         <input name="phoneNumber" id="input-phoneNumber" formControlName="phoneNumber" class="form-control" autofocus>
         <div *ngIf="f['phoneNumber'].invalid && (f['phoneNumber'].dirty || f['phoneNumber'].touched)" class="form-text text-danger form-error-text" [ngClass]="{ 'is-invalid': submitted && f['phoneNumber'].errors }">
-          <div *ngIf="f['phoneNumber'].errors['required']">Phone Number is required</div>
+          <div *ngIf="f['phoneNumber'].errors['required']">{{ 'auth.phone_number_required' | translate }}</div>
         </div>
       </div>
       <button id="subBtn"  class="btn btn-primary btn-full-width" [disabled]="isLoading || !form.valid">
-        <span *ngIf="!isLoading; else loading">Submit</span>
+        <span *ngIf="!isLoading; else loading">{{ 'auth.submit' | translate }}</span>
         <ng-template #loading>
           <i class="pi pi-spin pi-spinner text-white" style="font-size: 2rem"></i>
         </ng-template>
